force-app/main/default/objects/Account/fields/Last_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Engagement_Date__c</fullName>
    <description>Most recent attended or puppet show</description>
    <formula>if (ISBLANK(Last_Program_Attended__c), 
  if (ISBLANK(Puppet_Show__c), Last_Voucher_Date__c, 
    if (ISBLANK(Last_Voucher_Date__c), Puppet_Show__c, if(Puppet_Show__c &gt;= Last_Voucher_Date__c, Puppet_Show__c, 
  Last_Voucher_Date__c))),
  if (ISBLANK(Puppet_Show__c), 
    IF (ISBLANK(Last_Voucher_Date__c),Last_Program_Attended__c, 
       if ( Last_Program_Attended__c &gt;=  Last_Voucher_Date__c, Last_Program_Attended__c, Last_Voucher_Date__c)),
           if (ISBLANK ( Last_Voucher_Date__c), if (Last_Program_Attended__c &gt;=  Puppet_Show__c, Last_Program_Attended__c ,Puppet_Show__c),

if (AND(Last_Program_Attended__c &gt;=  Puppet_Show__c, Last_Program_Attended__c &gt;=  Last_Voucher_Date__c), Last_Program_Attended__c, if (AND(Puppet_Show__c &gt;= Last_Program_Attended__c, Puppet_Show__c &gt;=  Last_Voucher_Date__c), Puppet_Show__c, Last_Voucher_Date__c)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Most recent program attended or puppet show</inlineHelpText>
    <label>Last Engagement Date</label>
    <type>Date</type>
</CustomField>