force-app/main/default/objects/Account/fields/Last_Family_Camp__c.field-meta.xml
<CustomField>
    <fullName>Last_Family_Camp__c</fullName>
    <description>Roll up field on family attendance for family camps</description>
    <label>Last Family Camp Attended</label>
    <type>Date</type>
</CustomField>