force-app/main/default/objects/Account/fields/Last_Family_Experience_Attended__c.field-meta.xml
<CustomField>
    <fullName>Last_Family_Experience_Attended__c</fullName>
    <description>Roll up of family attendances for family experiences</description>
    <label>Last Family Experience Attended</label>
    <type>Date</type>
</CustomField>