force-app/main/default/objects/Account/fields/Last_Family_Fun_Day_Attended__c.field-meta.xml
<CustomField>
    <fullName>Last_Family_Fun_Day_Attended__c</fullName>
    <description>Roll up of family attendance for family fun days</description>
    <label>Last Family Fun Day Attended</label>
    <type>Date</type>
</CustomField>