force-app/main/default/objects/Account/fields/Last_Funeral_Costs__c.field-meta.xml
<CustomField>
    <fullName>Last_Funeral_Costs__c</fullName>
    <inlineHelpText>The date the funeral costs where approved by Camp Quality.</inlineHelpText>
    <label>Funeral Cost Approved</label>
    <type>Date</type>
</CustomField>