force-app/main/default/objects/Account/fields/Last_Modified_By_Community_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Community_User__c</fullName>
    <formula>OR(TEXT(LastModifiedBy.UserType) == &apos;Guest&apos;, TEXT(LastModifiedBy.UserType) == &apos;CspLitePortal&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By Community User</label>
    <type>Checkbox</type>
</CustomField>