force-app/main/default/objects/Account/fields/Last_Monetary_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Last_Monetary_Assistance__c</fullName>
    <label>Last Monetary Assistance</label>
    <type>Date</type>
</CustomField>