force-app/main/default/objects/Account/fields/Last_Program_Attended__c.field-meta.xml
<CustomField>
    <fullName>Last_Program_Attended__c</fullName>
    <label>Last Program Attended</label>
    <type>Date</type>
</CustomField>