force-app/main/default/objects/Account/fields/Last_Puppet_Show_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Puppet_Show_Date__c</fullName>
    <description>Roll up on psp attendences</description>
    <inlineHelpText>Latest psp attendance date that anyone in the family has attended.</inlineHelpText>
    <label>Last Puppet Show Date</label>
    <type>Date</type>
</CustomField>