force-app/main/default/objects/Account/fields/Last_Rec_Program_Attended__c.field-meta.xml
<CustomField>
    <fullName>Last_Rec_Program_Attended__c</fullName>
    <description>Rollup of program attendance where attendance = attended for rec program record types only.</description>
    <inlineHelpText>Does not include Retreats or Puppet Shows</inlineHelpText>
    <label>Last Rec Program Attended</label>
    <type>Date</type>
</CustomField>