force-app/main/default/objects/Account/fields/Last_Retreat_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Retreat_Booking_Date__c</fullName>
    <description>Latest Check Out Date from the Retreat Bookings object, where Status = Completed</description>
    <label>Last Retreat Booking Date</label>
    <type>Date</type>
</CustomField>