force-app/main/default/objects/Account/fields/Last_Voucher_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Voucher_Date__c</fullName>
    <label>Last Voucher Date</label>
    <summarizedField>Voucher__c.Date_Issued__c</summarizedField>
    <summaryForeignKey>Voucher__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>