force-app/main/default/objects/Account/fields/Leaving_Camp_Quality_Reason__c.field-meta.xml
<CustomField>
    <fullName>Leaving_Camp_Quality_Reason__c</fullName>
    <label>Leaving Camp Quality Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unengaged Family</fullName>
            </value>
            <value>
                <fullName>Aged Out</fullName>
            </value>
            <value>
                <fullName>Attended Graduation Camp</fullName>
            </value>
            <value>
                <fullName>Family Choice</fullName>
            </value>
            <value>
                <fullName>Camp Quality Choice</fullName>
            </value>
            <value>
                <fullName>Cannot Contact</fullName>
            </value>
            <value>
                <fullName>Left Country</fullName>
            </value>
            <value>
                <fullName>Beareaved</fullName>
                <label>Bereaved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>