force-app/main/default/objects/Account/fields/Linkage_Rating__c.field-meta.xml
<CustomField>
    <fullName>Linkage_Rating__c</fullName>
    <label>Linkage Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>