force-app/main/default/objects/Account/fields/Local_Government_Areas__c.field-meta.xml
<CustomField>
    <fullName>Local_Government_Areas__c</fullName>
    <label>Local Government Areas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Local_Government_Areas</valueSetName>
    </valueSet>
</CustomField>