force-app/main/default/objects/Account/fields/LongAutoName__c.field-meta.xml
<CustomField>
    <fullName>LongAutoName__c</fullName>
    <formula>CONTAINS( Name , &quot;,&quot;)</formula>
    <label>LongAutoName</label>
    <type>Checkbox</type>
</CustomField>