force-app/main/default/objects/Account/fields/Lowest_School_Year__c.field-meta.xml
<CustomField>
    <fullName>Lowest_School_Year__c</fullName>
    <label>Lowest School Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>