force-app/main/default/objects/Account/fields/Marketing_Case_Study_On_File__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Case_Study_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Case Study On File</label>
    <type>Checkbox</type>
</CustomField>