force-app/main/default/objects/Account/fields/Media_Opt_in_Public_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Media_Opt_in_Public_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I allow photo/video to be shared by Camp Quality on their social media pages and website - Legacy, not needed</description>
    <inlineHelpText>I allow photo/video to be shared by Camp Quality on their social media pages and website - Legacy, not needed</inlineHelpText>
    <label>Image Opt-in Public Sharing (LEGACY)</label>
    <type>Checkbox</type>
</CustomField>