force-app/main/default/objects/Account/fields/media_opt_in_share_participants_child__c.field-meta.xml
<CustomField>
    <fullName>media_opt_in_share_participants_child__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Image sharing permission with camp quality for child</inlineHelpText>
    <label>Child Image Opt-In Participant Sharing</label>
    <type>Checkbox</type>
</CustomField>