force-app/main/default/objects/Account/fields/Media_permission_corporate_2019__c.field-meta.xml
<CustomField>
    <fullName>Media_permission_corporate_2019__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I allow Camp Quality to share the photo/video with its corporate partners and major donors, to be used to promote Camp Quality&apos;s charitable purposes and the partnership</inlineHelpText>
    <label>Image Opt-In Permission Corporate</label>
    <type>Checkbox</type>
</CustomField>