force-app/main/default/objects/Account/fields/Media_Permission_Denied__c.field-meta.xml
<CustomField>
    <fullName>Media_Permission_Denied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Permission Denied</label>
    <type>Checkbox</type>
</CustomField>