force-app/main/default/objects/Account/fields/Media_Permission_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Media_Permission_Interviews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Permission Interviews</label>
    <type>Checkbox</type>
</CustomField>