force-app/main/default/objects/Account/fields/Media_Permission_Photos__c.field-meta.xml
<CustomField>
    <fullName>Media_Permission_Photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Permission Photos</label>
    <type>Checkbox</type>
</CustomField>