force-app/main/default/objects/Account/fields/Media_permission_Public_2019__c.field-meta.xml
<CustomField>
    <fullName>Media_permission_Public_2019__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I allow Camp Quality to use photos/video to promote Camp Quality&apos;s charitable purposes</inlineHelpText>
    <label>Image Opt In Permission Public</label>
    <type>Checkbox</type>
</CustomField>