force-app/main/default/objects/Account/fields/Media_permission_Public_2019_Child__c.field-meta.xml
<CustomField>
    <fullName>Media_permission_Public_2019_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For children in my household, I allow photos/videos to be shared to promote Camp Quality&apos;s charitable purposes</inlineHelpText>
    <label>Child Image Opt In Permission Public</label>
    <type>Checkbox</type>
</CustomField>