force-app/main/default/objects/Account/fields/Monetary_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Monetary_Assistance__c</fullName>
    <label>Monetary Assistance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>