force-app/main/default/objects/Account/fields/National_eCommunication_List__c.field-meta.xml
<CustomField>
    <fullName>National_eCommunication_List__c</fullName>
    <label>National eCommunication List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Invalid Email</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>