force-app/main/default/objects/Account/fields/No_Marketing_Emails__c.field-meta.xml
<CustomField>
    <fullName>No_Marketing_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to be ticked to stop all emails other than program invites</description>
    <inlineHelpText>This checkbox means this account only wants to be sent program emails, no newsletters or general emails</inlineHelpText>
    <label>No Marketing Emails</label>
    <type>Checkbox</type>
</CustomField>