force-app/main/default/objects/Account/fields/No_Of_Parents__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Parents__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>No Of Parents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>