force-app/main/default/objects/Account/fields/No_Show_Count__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Count__c</fullName>
    <inlineHelpText>Number of times a family has not shown up to an event in last 3 years.</inlineHelpText>
    <label>No Show Count Last 36 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>