force-app/main/default/objects/Account/fields/No_Show_Last_36_Months__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Last_36_Months__c</fullName>
    <description>Roll up on family attendance where status = no show for the last 36 months</description>
    <label>No Show Last 36 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>