force-app/main/default/objects/Account/fields/Off_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Off_Treatment__c</fullName>
    <description>Date field populated by workflow for Priority score</description>
    <label>Off Treatment</label>
    <type>Date</type>
</CustomField>