force-app/main/default/objects/Account/fields/On_Treatment__c.field-meta.xml
<CustomField>
    <fullName>On_Treatment__c</fullName>
    <description>Date field populated by workflow for Priority score</description>
    <label>On Treatment</label>
    <type>Date</type>
</CustomField>