force-app/main/default/objects/Account/fields/Other_Event__c.field-meta.xml
<CustomField>
    <fullName>Other_Event__c</fullName>
    <label>Other Event</label>
    <type>Date</type>
</CustomField>