force-app/main/default/objects/Account/fields/Other_Events_12__c.field-meta.xml
<CustomField>
    <fullName>Other_Events_12__c</fullName>
    <label>Other Events &lt; 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>