force-app/main/default/objects/Account/fields/Other_Events_1_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Events_1_2__c</fullName>
    <label>Other Events 1 - 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>