force-app/main/default/objects/Account/fields/Pallative__c.field-meta.xml
<CustomField>
    <fullName>Pallative__c</fullName>
    <description>Date field populated by workflow for Priority score</description>
    <label>Pallative</label>
    <type>Date</type>
</CustomField>