force-app/main/default/objects/Account/fields/Patients_in_Family__c.field-meta.xml
<CustomField>
    <fullName>Patients_in_Family__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of patients in family. this value is automatically populated via trigger.</description>
    <label>Patients in Family</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>