force-app/main/default/objects/Account/fields/Preferred_Event_Locations__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Event_Locations__c</fullName>
    <label>Preferred Event Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Illawarra</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Northern New South Wales</fullName>
            </value>
            <value>
                <fullName>South Queensland</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Australian Capital Territory</fullName>
            </value>
            <value>
                <fullName>Newcastle</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>Central Queensland</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>North Queensland</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>