force-app/main/default/objects/Account/fields/Primary_Contact_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Contact_Id__c</fullName>
    <formula>npe01__One2OneContact__r.ContactFullID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Contact Id</label>
    <type>Text</type>
</CustomField>