force-app/main/default/objects/Account/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <description>Pulls from Primary Contact Preferred email field</description>
    <formula>npe01__One2OneContact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Update email address on the Primary Contact record</inlineHelpText>
    <label>Primary Contact Email</label>
    <type>Text</type>
</CustomField>