force-app/main/default/objects/Account/fields/Primary_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mobile__c</fullName>
    <label>Primary Contact Mobile</label>
    <type>Phone</type>
</CustomField>