force-app/main/default/objects/Account/fields/Primary_Contact_Supporter_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Supporter_ID__c</fullName>
    <formula>npe01__One2OneContact__r.CQ_Supporter_ID__c</formula>
    <label>Primary Contact Supporter ID</label>
    <type>Text</type>
</CustomField>