force-app/main/default/objects/Account/fields/Program_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Program_Accepted__c</fullName>
    <description>Number pf family attendance with value Accepted (NOT attended).</description>
    <label>Program Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>