force-app/main/default/objects/Account/fields/Programs_Attended__c.field-meta.xml
<CustomField>
    <fullName>Programs_Attended__c</fullName>
    <label>Programs Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>