force-app/main/default/objects/Account/fields/Projected_Family_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Family_End_Date__c</fullName>
    <formula>if( DATE(YEAR( Youngest_Child_Birthdate__c) + 13,12,31) &lt;  End_Date_Treatment_Eligability__c,DATE(YEAR( Youngest_Child_Birthdate__c) + 13,12,31) , End_Date_Treatment_Eligability__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Family End Date</label>
    <type>Date</type>
</CustomField>