force-app/main/default/objects/Account/fields/Protect_Name__c.field-meta.xml
<CustomField>
    <fullName>Protect_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ensures the MoveData integration doesn&apos;t replace the Account name.</description>
    <label>C_Protect_Name</label>
    <type>Checkbox</type>
</CustomField>