force-app/main/default/objects/Account/fields/PSP_Declined_On__c.field-meta.xml
<CustomField>
    <fullName>PSP_Declined_On__c</fullName>
    <inlineHelpText>Family/School offered show but decline it.  Use this field to show this, and do follow up reports in the future.</inlineHelpText>
    <label>PSP Declined On</label>
    <type>Date</type>
</CustomField>