force-app/main/default/objects/Account/fields/PSP_Most_Recent_Show__c.field-meta.xml
<CustomField>
    <fullName>PSP_Most_Recent_Show__c</fullName>
    <description>Created by Rollup Helper</description>
    <inlineHelpText>Most recent show performed at a venue/school/hospital</inlineHelpText>
    <label>PSP Most Recent Show</label>
    <type>Date</type>
</CustomField>