force-app/main/default/objects/Account/fields/Public_Liability_Amount__c.field-meta.xml
<CustomField>
    <fullName>Public_Liability_Amount__c</fullName>
    <label>Public Liability Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>