force-app/main/default/objects/Account/fields/Puppet_Show__c.field-meta.xml
<CustomField>
    <fullName>Puppet_Show__c</fullName>
    <label>Puppet Show</label>
    <type>Date</type>
</CustomField>