force-app/main/default/objects/Account/fields/Puppet_Shows_12__c.field-meta.xml
<CustomField>
    <fullName>Puppet_Shows_12__c</fullName>
    <label>Puppet Shows &lt; 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>