force-app/main/default/objects/Account/fields/Puppet_Shows_2__c.field-meta.xml
<CustomField>
    <fullName>Puppet_Shows_2__c</fullName>
    <label>Puppet Shows 2 +</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>