force-app/main/default/objects/Account/fields/Relapsed__c.field-meta.xml
<CustomField>
    <fullName>Relapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relapsed</label>
    <type>Checkbox</type>
</CustomField>