force-app/main/default/objects/Account/fields/Remoteness__c.field-meta.xml
<CustomField>
    <fullName>Remoteness__c</fullName>
    <label>Remoteness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major Cities of Australia</fullName>
            </value>
            <value>
                <fullName>Inner Regional Australia</fullName>
            </value>
            <value>
                <fullName>Outer Regional Australia</fullName>
            </value>
            <value>
                <fullName>Remote Australia</fullName>
            </value>
            <value>
                <fullName>Very Remote Australia</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>