force-app/main/default/objects/Account/fields/Remoteness_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Remoteness_Indicator__c</fullName>
    <inlineHelpText>ABS 2014 Remoteness Indicator used to classify geographical need of family.</inlineHelpText>
    <label>Remoteness Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Remoteness_Indicators</valueSetName>
    </valueSet>
</CustomField>