force-app/main/default/objects/Account/fields/Rollup_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Test_Field__c</fullName>
    <label>Rollup Test Field</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>