force-app/main/default/objects/Account/fields/RTS__c.field-meta.xml
<CustomField>
    <fullName>RTS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RTS = Return to Sender.</description>
    <inlineHelpText>Tick the checkbox if you receive returned mail. You should also record the date this was received.</inlineHelpText>
    <label>RTS</label>
    <type>Checkbox</type>
</CustomField>