force-app/main/default/objects/Account/fields/RTS_Date__c.field-meta.xml
<CustomField>
    <fullName>RTS_Date__c</fullName>
    <description>Date that the returned mail was received</description>
    <inlineHelpText>Date that the returned mail was received</inlineHelpText>
    <label>RTS Date</label>
    <type>Date</type>
</CustomField>