force-app/main/default/objects/Account/fields/School_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>School_Affiliation__c</fullName>
    <label>School Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>STEINER</fullName>
            </value>
            <value>
                <fullName>ISLAMIC</fullName>
            </value>
            <value>
                <fullName>BAPTIST</fullName>
            </value>
            <value>
                <fullName>JEWISH</fullName>
            </value>
            <value>
                <fullName>CATHOLIC SYSTEMIC</fullName>
            </value>
            <value>
                <fullName>LUTHERAN</fullName>
            </value>
            <value>
                <fullName>UNITING CHURCH</fullName>
            </value>
            <value>
                <fullName>NON-DENOMINATIONAL</fullName>
            </value>
            <value>
                <fullName>MONTESSORI</fullName>
            </value>
            <value>
                <fullName>SDA</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>CHRISTIAN</fullName>
            </value>
            <value>
                <fullName>FREE REFORMED</fullName>
            </value>
            <value>
                <fullName>GREEK ORTHODOX</fullName>
            </value>
            <value>
                <fullName>ANGLICAN</fullName>
            </value>
            <value>
                <fullName>NON DENOMINATIONAL</fullName>
            </value>
            <value>
                <fullName>CHRISTADELPHIAN</fullName>
            </value>
            <value>
                <fullName>CATHOLIC INDEPENDENT</fullName>
            </value>
            <value>
                <fullName>BRETHREN</fullName>
            </value>
            <value>
                <fullName>BUDDHIST</fullName>
            </value>
            <value>
                <fullName>CATHOLIC</fullName>
            </value>
            <value>
                <fullName>INDEPENDENT</fullName>
            </value>
            <value>
                <fullName>APOSTOLIC CHURCH</fullName>
            </value>
            <value>
                <fullName>MULTI-DENOMINATIONAL</fullName>
            </value>
            <value>
                <fullName>PRESBYTERIAN</fullName>
            </value>
            <value>
                <fullName>INTER-DENOMINATIONAL</fullName>
            </value>
            <value>
                <fullName>ASSEMBLIES OF GOD</fullName>
            </value>
            <value>
                <fullName>CHRISTIAN OUTREACH</fullName>
            </value>
            <value>
                <fullName>PROTESTANT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>