force-app/main/default/objects/Account/fields/School_Code__c.field-meta.xml
<CustomField>
    <fullName>School_Code__c</fullName>
    <label>School Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary School</fullName>
            </value>
            <value>
                <fullName>Early Learning Centre</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>