force-app/main/default/objects/Account/fields/School_Enrolments__c.field-meta.xml
<CustomField>
    <fullName>School_Enrolments__c</fullName>
    <label>School Enrolments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>