force-app/main/default/objects/Account/fields/School_Gender__c.field-meta.xml
<CustomField>
    <fullName>School_Gender__c</fullName>
    <label>School Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coed</fullName>
            </value>
            <value>
                <fullName>Girls</fullName>
            </value>
            <value>
                <fullName>Boys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>